Change zindex of arrows to avoid overlapping navbar

--- a/react_project/src/components/bookWindow/bookWindow.css
+++ b/react_project/src/components/bookWindow/bookWindow.css
@@ -68,7 +68,7 @@
     position: absolute;
     top: 120px;
     left: 0;
-    z-index: 99;
+    z-index: 10;
     cursor: pointer;
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 0 15px 15px 0;
@@ -86,7 +86,7 @@
     position: absolute;
     top: 120px;
     right: 0;
-    z-index: 99;
+    z-index: 10;
     cursor: pointer;
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 15px 0 0 15px;
